change stylesheet url

--- a/src/style/Stylesheet.html
+++ b/src/style/Stylesheet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styling HTML Elements</title>
-    <link rel="stylesheet" href="./style/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         .flex-con {
             display: flex;
@@ -97,8 +97,8 @@
             <span style="display: block;" class="color-blue">input-fld</span>
             <input type="text" class="input-fld" placeholder="Naam invoeren">
             <span style="display: block;" class="color-blue">icons</span>
-            <img src="./img/account.svg" width="50">
-            <img src="./img/shopping.svg"width="50">
+            <img src="../img/account.svg" width="50">
+            <img src="../img/shopping.svg"width="50">
         </div>
    </div>
 
