--- a/src/style/Stylesheet.html
+++ b/src/style/Stylesheet.html
@@ -91,7 +91,7 @@
 
    <div class="inputs">
         <h1 class="color-red">Input</h1>
-        <div class="input">
+        <div class="form">
             <span class="color-blue">input-name</span>
             <p class="input-name">Naam</p>
             <span style="display: block;" class="color-blue">input-fld</span>
